add cargaH e nomeCurso
