# routes/user.js
@@ -24,6 +24,8 @@ router.post("/register", async (req, res) => {
   const user = new User({
     name: req.body.name,
     email: req.body.email,
+    nameCurso: req.body.nameCurso,
+    cargaHoraria: req.body.cargaHoraria,
     pwd,
     date: Date.now(),
   });
