# validation.js
@@ -6,6 +6,8 @@ const registerValidation = (data) => {
     name: joi.string().min(6).max(255).required(),
     email: joi.string().min(6).max(255).required(),
     pwd: joi.string().min(6).max(255).required(),
+    nameCurso: joi.string().min(6).max(255).required(),
+    cargaHoraria: joi.number(),
   });
   return schema.validate(data);
 };
